--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -266,6 +266,7 @@ nav {
   .navVertical {
     position: absolute;
     display: none;
+    list-style: none;
     width: 200px;
     background-color: rgba(0, 0, 0, .5);
   }
