--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -4,6 +4,7 @@
 * {
   box-sizing: border-box; 
   text-decoration: none;
+  list-style: none;
   margin: 0;
   padding: 0;
 }
@@ -62,6 +63,24 @@ article {
   width: 100%; /*ELIMINAR*//*COMPROBAR*/
   margin: 1rem auto; /*REVISION ESPACIOS*/
 }
+  article ul, ol { 
+    margin: 1rem 0 2rem;
+    list-style-position: inside;
+  }
+
+  article ul { list-style-type: square;}
+
+    article li ul {
+      margin-left: 5%;
+    }
+
+    article li {margin: .5rem 0;}
+    article ul li::marker {
+      color: var(--aguamar); 
+      font-size: 1.5rem;
+    }
+
+
 /*****************************************/
 /* ENCABEZADOS */
 /*****************************************/
@@ -107,23 +126,8 @@ code {
 a {color: var(--tipografiaClara);}
 /*****************************************/
 /* LISTAS */
-/*****************************************//*
-ul, ol { -> REVISAR
-  margin: 1rem 0 2rem;
-  list-style-position: inside;
-}*/
+/*****************************************/
 
-ul { list-style-type: square;}
-
-  li ul {
-    margin-left: 5%;
-  }
-
-  /*li {margin: .5rem 0;}*/
-  ul li::marker {
-    color: var(--aguamar); 
-    font-size: 1.5rem;
-  }
 /*****************************************/
 /* TABLAS */
 /*****************************************/
@@ -182,18 +186,21 @@ img {
       display: none;
       list-style: none;
       width: 200px;
-      background-color: var(--aguamar);
-      border: 2px dashed hotpink;
+      background-color: rgba(52, 152, 219, 0.5);
+      backdrop-filter: blur(2px);
     }
     .navHorizontal li:hover .navVertical {
       display: block;
     }
     .navVertical li:hover {
-      background-color: black;
+      background-color: var(--aguamar);
     }
     .navVertical li a {
       display: block;
-      padding: .2rem;
+      padding: .5rem;
+      font-size: 1rem;
+      font-weight: bold;
+      font-family: 'Montserrat', sans-serif;
     }
 
 .tituloTema { /* Título del tema *//*MODIFICACION*/
