--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -189,9 +189,9 @@ img {
       background-color: rgba(52, 152, 219, 0.5);
       backdrop-filter: blur(2px);
     }
-    /*.navHorizontal li:active .navVertical {
+    .navHorizontal li:active .navVertical {
       display: block;
-    }*/
+    }
 
     .navVertical li:hover {
       background-color: var(--aguamar);
