--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -189,7 +189,7 @@ img {
       background-color: rgba(52, 152, 219, 0.5);
       backdrop-filter: blur(2px);
     }
-    .navHorizontal li:active .navVertical {
+    .navHorizontal li:hover .navVertical {
       display: block;
     }
 
