--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -33,6 +33,7 @@ body class apuntes
 
   .articuloApuntes {
     align-items: flex-start;
+    border: 2px dashed hotpink;
   }
 
 body { /*
@@ -70,7 +71,6 @@ section { /*
 article { 
   /*width: 100%; ELIMINAR*/
   margin: 1rem auto; /*REVISION ESPACIOS*/
-  border: 2px dashed darkorchid;
 }
   article ul, ol { 
     margin: 1rem 0 2rem;
