--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -236,7 +236,7 @@ img {
 .indice { /* Indice del tema */ /*ELIMINAR*/
   width: 80%;
   margin: 1rem auto;
-}
+} /*
 
     .indice li { 
       padding: .2rem;
