--- a/css/general.css
+++ b/css/general.css
@@ -1,20 +1,25 @@
-/*************************************************************************************/
-/* RESET                                                                             */
-/*************************************************************************************/
+/* RESET _______________________________*/
+
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  list-style: none;
   list-style-type: none;
   text-decoration: none;
-  box-sizing: border-box;
 }
-/*************************************************************************************/
-/* SEMANTICAS                                                                        */
-/*************************************************************************************/
+
 :root {
   --azulPrincipal: rgb(1, 87, 155);
   --blancoTipologia: #FDFEFE;
   --naranjaContraste: #FF6F00;
+  --fondoGris: #212121;
+  --fondoOscuro: #151515;
+  --tipografiaClara: #E5E7E9;
+  --aguamar: #3498db;
+  --azulGrisaceo: #2980B9;
+  --morado: #8E44AD;
+  --mostaza: #F1C40F;
 /* Fuentes
   font-family: 'Montserrat', sans-serif;
   font-family: 'Smooch', cursive;
@@ -22,12 +27,54 @@
 */
 }
 
-/*body {}*/
+body { 
+  font-size: 1.5rem;
+  background-color: var(--fondoGris);
+  color: var(--tipografiaClara);
+}
+
+header { 
+  width: 100%;
+  min-height: 200px;
+  font-family: 'Titan One', cursive;
+  font-weight: 100;
+}
 
 section {
   width: 80%;
   margin: 0 auto;
 }
+
+article { 
+  /*width: 100%; ELIMINAR*/
+  margin: 1rem auto; /*REVISION ESPACIOS*/
+}
+  article ul, ol { 
+    margin: 1rem 0 2rem;
+    list-style-position: inside;
+  }
+
+  article ul { list-style-type: square;}
+
+    article li ul {
+      margin-left: 5%;
+    }
+
+    article li {margin: .5rem 0;}
+    article ul li::marker {
+      color: var(--aguamar); 
+      font-size: 1.5rem;
+    }
+
+/* ENCABEZADOS ___________________*/
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Titan One', cursive;
+  font-weight: 100;
+}
+
+h1, h2 {margin-bottom: 2rem;} /*REVISION ESPACIOS*/
+h3, h4 {margin-bottom: 1rem;} /*REVISION ESPACIOS*/
+h5, h6 {margin-bottom: .5rem;} /*REVISION ESPACIOS*/
 
 h1 { font-size: 3rem;}
 h2 { font-size: 2.5rem;}
@@ -35,6 +82,11 @@ h3 { font-size: 2rem;}
 
 a {
   color: var(--blancoTipologia);
+}
+
+p {
+  margin-bottom: 1rem; /*REVISION ESPACIOS*/
+  padding: 1rem auto;  /*REVISION ESPACIOS*/
 }
 
 /*************************************************************************************/
