--- a/css/mediaQ.css
+++ b/css/mediaQ.css
@@ -2,6 +2,29 @@
 /* MEDIA QUERIES                                                                     */
 /*************************************************************************************/
 
+@media screen and (min-width:768px) and (max-width: 1024px){
+  .presentacion {font-size: 6rem;}
+  .card {width: 330px;}
+}
+
+@media screen and (max-width: 425px) and (max-width: 768px){
+  .presentacion {font-size: 6rem;}
+  .card {width: 250px;}
+}
+
+@media screen and (max-width: 425px){
+  section {width: 98%;}
+  .presentacion {font-size: 3.5rem;}
+  .tituloSeccion {
+    text-align: center;
+    font-size: 1.6rem;
+  }
+  .card {width: 100%;}
+  .descripcionCard {font-size: 1rem;}
+}
+
+/*********************************************************/
+
 @media screen and (max-width: 1280px){
   body { 
     font-size: 1.3rem; 
