--- a/css/clases.css
+++ b/css/clases.css
@@ -5,8 +5,8 @@
   align-items: stretch;
   /*POSIBLE GAP ¿? */
 }
-
-.navtop { /* Barra superior */
+/* Barra superior *//* Indices y apuntes, se incluye botón hacia principal y nombre asignatura */
+.navtop { 
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -15,16 +15,16 @@
   padding: .8rem 10%;
   background-color: var(--aguamar);
 }
-
-.contenedor { /* Contenedor todo menos header *//*ELIMINAR*/
+/*
+.contenedor {  Contenedor todo menos header *//*ELIMINAR
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   gap: .5rem;
   width: 80%;
   margin: 0 auto;
-}
-
+}*/
+/* Botón para ir hacia arriba en la página */
 .btnArriba {
   width: 120px;
   margin: 1rem 0;
@@ -37,6 +37,7 @@
     border: 3px solid rgb(52, 152, 219);
     background-color: rgba(52, 152, 219, .3);
   }
+/* ______________________________________ */
 
 /* CLASES VISTA PRINCIPAL ________________*/
 /*    Presentacion    *//* Titulo principal SapheryDesings */
@@ -112,7 +113,7 @@
   display: flex;
   flex-direction: column;
 }
-
+/* ______________________________________ */
 
 /* CLASES VISTA INDICE ___________________*/
 .temaIndice {
@@ -143,7 +144,7 @@
     display: block;
     padding: 1rem 2rem;
   }
-
+/* ______________________________________ */
 
 /* CLASES VISTA APUNTES __________________*/
 .articuloApuntes {
@@ -168,7 +169,7 @@
   padding-left: 10px;
 }
 
-/**********************************************/
+/* ______________________________________ */
 
 
 
