--- a/css/clases.css
+++ b/css/clases.css
@@ -5,7 +5,7 @@
   align-items: stretch;
   /*POSIBLE GAP ¿? */
 }
-/* Barra superior *//* Indices y apuntes, se incluye botón hacia principal y nombre asignatura */
+/* Barra superior - Indices y apuntes, se incluye botón hacia principal y nombre asignatura */
 .navtop { 
   display: flex;
   flex-direction: row;
@@ -15,15 +15,7 @@
   padding: .8rem 10%;
   background-color: var(--aguamar);
 }
-/*
-.contenedor {  Contenedor todo menos header *//*ELIMINAR
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  gap: .5rem;
-  width: 80%;
-  margin: 0 auto;
-}*/
+
 /* Botón para ir hacia arriba en la página */
 .btnArriba {
   width: 120px;
@@ -40,14 +32,14 @@
 /* ______________________________________ */
 
 /* CLASES VISTA PRINCIPAL ________________*/
-/*    Presentacion    *//* Titulo principal SapheryDesings */
+/*    Presentacion - Titulo principal SapheryDesings */
 .presentacion {
   font-family: 'Smooch', cursive;
   font-size: 8rem;
   text-align: center;
 }
 
-/*       Titulos       *//* Son los titulos de la tres secciones daw, proyectos y devAcademy*/
+/*       Titulos - Son los titulos de la tres secciones daw, proyectos y devAcademy*/
 .tituloSeccion {
   margin: 1rem 0;
   font-family: 'Titan One', cursive;
@@ -62,7 +54,7 @@
   padding: 10px 0;
 }
 
-/*        Card        *//* Prototipo de tarjeta */
+/*        Card - Prototipo de tarjeta */
 .card {
   display: flex;
   flex-flow: column;
@@ -70,8 +62,6 @@
   width: 300px;
   height: 400px;
   background-color: rgba(2, 119, 189, .4);
-  /*box-shadow: 0 0 2px 2px rgba(2, 119, 189, .8);*/
-  /*border: 1px dashed darkorange;*/
   font-size: 1rem;
 } 
     .tituloCard, .footerCard {
@@ -91,7 +81,6 @@
       background-color: rgba(255, 255, 255, .1);
     }
     .descripcionCard {
-      /*height: 130px;*/
       padding: .2rem;
       flex-grow: 5;
     }
