--- a/css/general.css
+++ b/css/general.css
@@ -34,18 +34,6 @@ body {
   font-size: large;
 }
 
-header { 
-  width: 100%;
-  min-height: 200px;
-  font-family: 'Titan One', cursive;
-  font-weight: 100;
-}
-
-section {
-  width: 80%;
-  margin: 0 auto;
-}
-
 article { 
   margin: 1rem auto; /*REVISION ESPACIOS*/
 }
@@ -80,10 +68,10 @@ h1 { font-size: 3rem;}
 h2 { font-size: 2.5rem;}
 h3 { font-size: 2rem;}
 
-a {
-  color: var(--blancoTipologia); /* --tipografiaClara */
-}
+/* ENLACES ______________________*/
+a { color: var(--blancoTipologia)}
 
+/* PARRAFO ______________________*/
 p {
   margin-bottom: 1rem; /*REVISION ESPACIOS*/
   padding: 1rem auto;  /*REVISION ESPACIOS*/
