--- a/css/clases.css
+++ b/css/clases.css
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  gap: 1rem;
 }
 
 /* Botón para ir hacia arriba en la página */
