--- a/css/clases.css
+++ b/css/clases.css
@@ -71,6 +71,7 @@
 /*        Card - Prototipo de tarjeta */
 .card { /* Modificar metodología BEM */
   display: flex;
+  flex-flow: column;
   justify-content: center;
   width: 300px;
   height: 200px;
@@ -78,7 +79,7 @@
   font-size: 1rem;
 } 
   .card div { margin: auto; text-align: center;}
-
+  .card div h5 { font-family: 'Montserrat', sans-serif; font-weight: 600;}
   .segundoT { background-color: rgba(142, 68, 173, .4);}
 /*      Fin Card      */
 
