--- a/css/clases.css
+++ b/css/clases.css
@@ -81,6 +81,7 @@
   .card div { margin: auto; text-align: center;}
   .card div h5 { font-family: 'Montserrat', sans-serif; font-weight: 600;}
   .segundoT { background-color: rgba(142, 68, 173, .4);}
+  .tercerT { background-color: rgba(241, 196, 15, .4);}
 /*      Fin Card      */
 
 /* ______________________________________ */
