--- a/css/clases.css
+++ b/css/clases.css
@@ -1,5 +1,12 @@
 /* CALSES GLOBALES _______________________*/
-
+:root {
+  --cyanIlumina: #03A9F4;
+  --magentaIlumina: #673AB7;
+  --verdemarIlumina: #009688;
+  --rojonaranjaIlumina: #FF5722;
+  --fusciaIlumina: #E91E63;
+  --aguamarIlumina: #00BCD4;
+}
 .main--Principal, .main--Indice, .main--Apuntes {
   display: flex;
   flex-flow: column wrap;
@@ -76,12 +83,14 @@
   width: 300px;
   height: 200px;
   background-color: rgba(2, 119, 189, .4);
+  background-color: var(--cyanIlumina);
   font-size: 1rem;
 } 
   .card div { margin: auto; text-align: center;}
   .card div h5 { font-family: 'Montserrat', sans-serif; font-weight: 600;}
-  .segundoT { background-color: rgba(142, 68, 173, .4);}
-  .tercerT { background-color: rgba(241, 196, 15, .4);}
+  .segundoT { background-color: var(--magentaIlumina);}
+  .tercerT { background-color: var(--verdemarIlumina);}
+  .inactiva { background-color: rgba(0, 0, 0, .5); color: rgba(0, 0, 0, .5);}
 /*      Fin Card      */
 
 /* ______________________________________ */
