--- a/css/apuntes.css
+++ b/css/apuntes.css
@@ -15,6 +15,7 @@ body {
   width: 60%;
   margin: auto;
   font-family: 'Montserrat', sans-serif;
+  background-color: white;
 }
 
 h1, h2, h3, h4, p, ol, ul, table {
@@ -26,6 +27,10 @@ table {
   margin: 5rem auto;
   border-collapse: collapse;
 }
+  caption {
+    text-align: left;
+    margin-bottom: 1rem;
+  }
   th {
     color: var(--azulClaro);
     padding: .3rem 1.2rem;
@@ -72,7 +77,7 @@ footer {
 }
 
 .subTitulo {
-  margin-top: 2rem;
+  margin-top: 5rem;
   color: var(--azulPrincipal);
   border-top: 5px solid var(--azulDetalles);
 }
