--- a/css/apuntes.css
+++ b/css/apuntes.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   text-decoration: none;
+  
 }
 
 :root {
@@ -10,60 +11,54 @@
   --azulClaro: #EBF5FB;
 }
 
-body {
-  width: 100%;
-  margin: auto;
-  font-family: 'Montserrat', sans-serif;
-}
 
-h1, h2, h3, h4, p, ol, ul, table {
-  margin: 1rem 0; 
+.contenedorApuntes h1, h2, h3, h4, p {
+  margin: 1rem auto; 
   padding: .5rem;
 }
 
-table {
+.contenedorApuntes table {
   margin: 5rem auto;
   border-collapse: collapse;
 }
-  caption {
+.contenedorApuntes caption {
     text-align: left;
     margin-bottom: 1rem;
   }
-  th {
+  .contenedorApuntes th {
     color: var(--azulClaro);
     padding: .3rem 1.2rem;
     border: 3px dashed var(--azulDetalles);
     border-right: 3px dashed var(--azulClaro);
     background-color: var(--azulDetalles);
   }
-    th:last-child { border-right: 3px dashed var(--azulDetalles);}
-  td {
+  .contenedorApuntes th:last-child { border-right: 3px dashed var(--azulDetalles);}
+  .contenedorApuntes td {
+    padding: .5rem;
     color: var(--azulDetalles);
     border: 3px dashed var(--azulDetalles);
     background-color: var(--azulClaro);
   }
 
-ol, ul {
+.contenedorApuntes ol, ul {
+  margin: 1rem auto; 
+  padding: .5rem;
   padding-left: 2rem;
   background-color: var(--azulClaro);
 }
 
-li, td {
+.contenedorApuntes li {
   padding: .5rem;
 }
 
-footer {
-  background-color: var(--azulDetalles);
-  min-height: 50px;
-  margin-top: .5rem;
-  color: #D0D3D4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 
 /* CLASES */
-.contenedorApuntes { width: 60%; margin: auto;}
+.contenedorApuntes { 
+  width: 60%; 
+  margin: auto;
+  font-family: 'Montserrat', sans-serif
+}
 .tituloPrincipal {
   font-weight: 800;
   background-color: var(--azulPrincipal);
@@ -113,6 +108,17 @@ footer {
     font-weight: bold;
     padding: .3rem 1.2rem;
   }
+
+.pieApuntes {
+  background-color: var(--azulDetalles);
+  min-height: 50px;
+  margin-top: .5rem;
+  color: #D0D3D4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 /***********************************************/
 @media screen and (max-width: 1280px){ 
