--- a/css/clases.css
+++ b/css/clases.css
@@ -1,4 +1,10 @@
 /* CALSES GLOBALES _______________________*/
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+  
+}
+
 :root {
   --cyanIlumina: #03A9F4;
   --magentaIlumina: #673AB7;
@@ -6,8 +12,11 @@
   --rojonaranjaIlumina: #FF5722;
   --fusciaIlumina: #E91E63;
   --aguamarIlumina: #00BCD4;
-  /* --------------------------*/
+  /* APUNTES ____*/
   --azulPrincipal: #3498db;
+  --azulDetalles: #01579b;
+  --amarilloNota: #FFFF99;
+  --azulClaro: #EBF5FB;
 }
 .main--Principal, .main--Indice, .main--Apuntes {
   display: flex;
@@ -129,9 +138,139 @@
   }
 /* ______________________________________ */
 
-/* CLASES VISTA APUNTES __________________
+/* CLASES VISTA APUNTES __________________*/
+
+.contenedorApuntes :is(h1, h2, h3, h4, p) {
+  margin: 1rem auto; 
+  padding: .5rem;
+}
+
+/* TABLAS __________________________*/
+.contenedorApuntes table {
+  margin: 5rem auto;
+  border-collapse: collapse;
+}
+.contenedorApuntes caption {
+    text-align: left;
+    margin-bottom: 1rem;
+  }
+  .contenedorApuntes th {
+    color: var(--azulClaro);
+    padding: .3rem 1.2rem;
+    border: 3px dashed var(--azulDetalles);
+    border-right: 3px dashed var(--azulClaro);
+    background-color: var(--azulDetalles);
+  }
+  .contenedorApuntes th:last-child { border-right: 3px dashed var(--azulDetalles);}
+  .contenedorApuntes td {
+    padding: .5rem;
+    color: var(--azulDetalles);
+    border: 3px dashed var(--azulDetalles);
+    background-color: var(--azulClaro);
+  }
+
+/* LISTAS ___________________________*/
+.contenedorApuntes ol, ul {
+  margin: 1rem auto; 
+  padding: .5rem;
+  padding-left: 2rem;
+  background-color: var(--azulClaro);
+}
+
+.contenedorApuntes li {
+  padding: .5rem;
+}
+
+/* CONTENEDOR ____________________*/
+.contenedorApuntes { 
+  width: 60%; 
+  margin: auto;
+  font-family: 'Montserrat', sans-serif
+}
+.tituloPrincipal { /* BORRAR */
+  font-weight: 800;
+  background-color: var(--azulPrincipal);
+  color: white;
+  margin-bottom: 2rem;
+  margin-top: 0;
+}
+
+/* CABECERAS ______________________*/
+.tituloTema {
+  border-left: 10px solid var(--azulDetalles);
+  color: var(--azulPrincipal);
+}
+
+.subTitulo {
+  margin-top: 5rem;
+  color: var(--azulPrincipal);
+  border-top: 5px solid var(--azulDetalles);
+}
+
+.apartado {
+  margin-top: 2rem;
+  margin-bottom: 0;
+  padding: .5rem 2rem .5rem .5rem;
+  display: inline-block;
+  color: var(--azulClaro);
+  background-color: var(--azulDetalles);
+}
+
+/* RESALTADOS ________________________*/
+.nota {
+  width: 92%;
+  margin: auto;
+  padding: 1rem;
+  background-color: var(--amarilloNota);
+  font-size: 1.1rem;
+  font-weight: bold;
+  font-style: italic;
+}
+
+/* NAVEGACION _______________________*/
+.menuOpcional {
+  display: flex;
+  gap: .5rem;
+}
+  .botonO {
+    background-color: darkorange;
+    color: white;
+    font-weight: bold;
+    padding: .3rem 1.2rem;
+  }
+
+/* FOOTER _________________________*/
+.pieApuntes {
+  background-color: var(--azulDetalles);
+  min-height: 50px;
+  margin-top: .5rem;
+  color: #D0D3D4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
+/* MEDIAS Q _____________________________*/
+@media screen and (max-width: 1280px){ 
+  .contenedorApuntes { width: 70%;}
+}
+@media screen and (max-width: 1024px){ 
+  .contenedorApuntes { width: 80%;}
+}
+@media screen and (max-width: 800px){ 
+  .contenedorApuntes { width: 90%;}
+}
+@media screen and (max-width: 480px){ 
+  .contenedorApuntes { width: 100%;}
+  table {
+    margin: 1rem auto;
+  }
+  .tituloTema { 
+    border: none;
+    padding-left: .2rem;
+  }
+}
 /* ______________________________________ */
 
 
